--- a/applications/processor/pom.xml
+++ b/applications/processor/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>bridge-processor</module>
+        <module>groovy-transform-processor</module>
         <module>header-enricher-processor</module>
         <module>splitter-processor</module>
         <module>filter-processor</module>
