--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -2,6 +2,8 @@ sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka
 sink.cassandra.metadata=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka:jar:metadata:@cassandra-sink.version@
 sink.counter=maven://org.springframework.cloud.stream.app:counter-sink-kafka:@counter-sink.version@
 sink.counter.metadata=maven://org.springframework.cloud.stream.app:counter-sink-kafka:jar:metadata:@counter-sink.version@
+sink.file=maven://org.springframework.cloud.stream.app:file-sink-kafka:@file-sink.version@
+sink.file.metadata=maven://org.springframework.cloud.stream.app:file-sink-kafka:jar:metadata:@file-sink.version@
 sink.jdbc=maven://org.springframework.cloud.stream.app:jdbc-sink-kafka:@jdbc-sink.version@
 sink.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-sink-kafka:jar:metadata:@jdbc-sink.version@
 sink.log=maven://org.springframework.cloud.stream.app:log-sink-kafka:@log-sink.version@
@@ -10,6 +12,10 @@ sink.mongodb=maven://org.springframework.cloud.stream.app:mongodb-sink-kafka:@mo
 sink.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-sink-kafka:jar:metadata:@mongodb-sink.version@
 sink.rabbit=maven://org.springframework.cloud.stream.app:rabbit-sink-kafka:@rabbit-sink.version@
 sink.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-sink-kafka:jar:metadata:@rabbit-sink.version@
+sink.redis=maven://org.springframework.cloud.stream.app:redis-sink-kafka:@redis-sink.version@
+sink.redis.metadata=maven://org.springframework.cloud.stream.app:redis-sink-kafka:jar:metadata:@redis-sink.version@
+source.file=maven://org.springframework.cloud.stream.app:file-source-kafka:@file-source.version@
+source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-kafka:jar:metadata:@file-source.version@
 source.http=maven://org.springframework.cloud.stream.app:http-source-kafka:@http-source.version@
 source.http.metadata=maven://org.springframework.cloud.stream.app:http-source-kafka:jar:metadata:@http-source.version@
 source.jdbc=maven://org.springframework.cloud.stream.app:jdbc-source-kafka:@jdbc-source.version@
@@ -18,8 +24,14 @@ source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-kafka
 source.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:jar:metadata:@mongodb-source.version@
 source.time=maven://org.springframework.cloud.stream.app:time-source-kafka:@time-source.version@
 source.time.metadata=maven://org.springframework.cloud.stream.app:time-source-kafka:jar:metadata:@time-source.version@
+processor.bridge=maven://org.springframework.cloud.stream.app:bridge-processor-kafka:@bridge-processor.version@
+processor.bridge.metadata=maven://org.springframework.cloud.stream.app:bridge-processor-kafka:jar:metadata:@bridge-processor.version@
 processor.filter=maven://org.springframework.cloud.stream.app:filter-processor-kafka:@filter-processor.version@
 processor.filter.metadata=maven://org.springframework.cloud.stream.app:filter-processor-kafka:jar:metadata:@filter-processor.version@
+processor.groovy-transform=maven://org.springframework.cloud.stream.app:groovy-transform-processor-kafka:@groovy-transform-processor.version@
+processor.groovy-transform.metadata=maven://org.springframework.cloud.stream.app:groovy-transform-processor-kafka:jar:metadata:@groovy-transform-processor.version@
+processor.header-enricher=maven://org.springframework.cloud.stream.app:header-enricher-processor-kafka:@header-enricher-processor.version@
+processor.header-enricher.metadata=maven://org.springframework.cloud.stream.app:header-enricher-processor-kafka:jar:metadata:@header-enricher-processor.version@
 processor.splitter=maven://org.springframework.cloud.stream.app:splitter-processor-kafka:@splitter-processor.version@
 processor.splitter.metadata=maven://org.springframework.cloud.stream.app:splitter-processor-kafka:jar:metadata:@splitter-processor.version@
 processor.transform=maven://org.springframework.cloud.stream.app:transform-processor-kafka:@transform-processor.version@
