--- a/applications/processor/groovy-processor/pom.xml
+++ b/applications/processor/groovy-processor/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>groovy-transform-processor</artifactId>
-    <name>groovy-transform-processor</name>
-    <description>groovy-transform processor apps</description>
+    <name>groovy-processor</name>
+    <description>groovy processor apps</description>
     <version>3.0.0-SNAPSHOT</version>
 
     <parent>
@@ -92,15 +92,15 @@
                         <type>processor</type>
                         <version>${project.version}</version>
                         <configClass>
-                            org.springframework.cloud.stream.app.groovy.transform.processor.GroovyTransformProcessorConfiguration.class
+                            org.springframework.cloud.stream.app.groovy.processor.GroovyProcessorConfiguration.class
                         </configClass>
-                        <functionDefinition>byteArrayTextToString|groovyTransformFunction</functionDefinition>
+                        <functionDefinition>byteArrayTextToString|groovyProcessorFunction</functionDefinition>
                     </generatedApp>
 
                     <dependencies>
                         <dependency>
                             <groupId>org.springframework.cloud.stream.app</groupId>
-                            <artifactId>groovy-transform-processor</artifactId>
+                            <artifactId>groovy-processor</artifactId>
                             <version>${project.version}</version>
                         </dependency>
                     </dependencies>
