Ftp consumer/sink
Resolves https://github.com/spring-cloud/stream-applications/issues/28

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -13,6 +13,7 @@
         <module>cassandra-sink</module>
         <module>counter-sink</module>
         <module>file-sink</module>
+        <module>ftp-sink</module>
         <module>log-sink</module>
         <module>mongodb-sink</module>
         <module>jdbc-sink</module>
