--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -40,9 +40,13 @@
 	</properties>
 
   	<modules>
+		<module>common/ftp-common</module>
+		<module>common/function-test-support</module>
+
 		<module>consumer/cassandra-consumer</module>
 		<module>consumer/counter-consumer</module>
 		<module>consumer/file-consumer</module>
+		<module>consumer/ftp-consumer</module>
 		<module>consumer/jdbc-consumer</module>
 		<module>consumer/log-consumer</module>
 		<module>consumer/mongodb-consumer</module>
