Update router docs

--- a/applications/sink/router-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/sink/router-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,1 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.fn.consumer.log.LogConsumerProperties
+configuration-properties.classes=org.springframework.cloud.stream.app.router.sink.RouterSinkProperties
+
