Migrate throughput sink
Resolves https://github.com/spring-cloud/stream-applications/issues/25

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -21,5 +21,6 @@
         <module>rabbit-sink</module>
         <module>router-sink</module>
         <module>sftp-sink</module>
+        <module>throughput-sink</module>
     </modules>
 </project>
