--- a/applications/sink/counter-sink/pom.xml
+++ b/applications/sink/counter-sink/pom.xml
@@ -61,8 +61,7 @@
                         <name>counter</name>
                         <type>sink</type>
                         <version>${project.version}</version>
-                        <configClass>org.springframework.cloud.fn.consumer.counter.CounterConsumerConfiguration.class
-                        </configClass>
+                        <configClass>org.springframework.cloud.fn.consumer.counter.CounterConsumerConfiguration.class</configClass>
                         <functionDefinition>byteArrayTextToString|counterConsumer</functionDefinition>
                     </generatedApp>
                     <dependencies>
