--- a/applications/source/http-source/pom.xml
+++ b/applications/source/http-source/pom.xml
@@ -52,8 +52,7 @@
                         <name>http</name>
                         <type>source</type>
                         <version>${project.version}</version>
-                        <configClass>org.springframework.cloud.fn.supplier.http.HttpSupplierConfiguration.class
-                        </configClass>
+                        <configClass>org.springframework.cloud.fn.supplier.http.HttpSupplierConfiguration.class</configClass>
                     </generatedApp>
 
                     <dependencies>
