--- a/applications/processor/groovy-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/processor/groovy-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,3 +1,3 @@
-configuration-properties.classes=org.springframework.cloud.stream.app.groovy.processor.GroovyProcessorProperties
+configuration-properties.classes=org.springframework.cloud.stream.app.processor.groovy.GroovyProcessorProperties
 
 
