cleaning up whitelist properties files

--- a/applications/sink/rabbit-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/sink/rabbit-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,2 +1,2 @@
-configuration-properties.classes=RabbitConsumerProperties, \
+configuration-properties.classes=org.springframework.cloud.fn.consumer.rabbit.RabbitConsumerProperties, \
   org.springframework.boot.autoconfigure.amqp.RabbitProperties
