--- a/applications/source/file-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/file-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,2 +1,2 @@
-configuration-properties.classes=FileSupplierProperties,\
-  FileConsumerProperties
+configuration-properties.classes=org.springframework.cloud.fn.supplier.file.FileSupplierProperties,\
+  org.springframework.cloud.fn.supplier.file.FileConsumerProperties
