--- a/applications/source/jdbc-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/jdbc-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,4 +1,4 @@
-configuration-properties.classes=JdbcSupplierProperties,\
+configuration-properties.classes=org.springframework.cloud.fn.supplier.jdbc.JdbcSupplierProperties,\
   org.springframework.cloud.stream.config.DefaultPollerProperties
 configuration-properties.names=\
 spring.datasource.url,\
