SFTP Consumer/Sink
Resolves https://github.com/spring-cloud/stream-applications/issues/32

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -20,5 +20,6 @@
         <module>redis-sink</module>
         <module>rabbit-sink</module>
         <module>router-sink</module>
+        <module>sftp-sink</module>
     </modules>
 </project>
